api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/frontend: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: CLIENT_API_BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: CLIENT_API_BASE_URL
                  name: env
            - name: CLIENT_ORIGIN
              valueFrom:
                configMapKeyRef:
                  key: CLIENT_ORIGIN
                  name: env
            - name: DB_HOST
              value: mysqldb
            - name: DB_NAME
              value: rewardready
            - name: DB_PASSWORD
              value: "123456"
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: root
            - name: MYSQLDB_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: MYSQLDB_DATABASE
                  name: env
            - name: MYSQLDB_DOCKER_PORT
              valueFrom:
                configMapKeyRef:
                  key: MYSQLDB_DOCKER_PORT
                  name: env
            - name: MYSQLDB_LOCAL_PORT
              valueFrom:
                configMapKeyRef:
                  key: MYSQLDB_LOCAL_PORT
                  name: env
            - name: MYSQLDB_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MYSQLDB_ROOT_PASSWORD
                  name: env
            - name: MYSQLDB_USER
              valueFrom:
                configMapKeyRef:
                  key: MYSQLDB_USER
                  name: env
            - name: NODE_DOCKER_PORT
              valueFrom:
                configMapKeyRef:
                  key: NODE_DOCKER_PORT
                  name: env
            - name: NODE_LOCAL_PORT
              valueFrom:
                configMapKeyRef:
                  key: NODE_LOCAL_PORT
                  name: env
            - name: REACT_DOCKER_PORT
              valueFrom:
                configMapKeyRef:
                  key: REACT_DOCKER_PORT
                  name: env
            - name: REACT_LOCAL_PORT
              valueFrom:
                configMapKeyRef:
                  key: REACT_LOCAL_PORT
                  name: env
          image: docker.cs.vt.edu/jackp96/rewardreadydocker/api:1.6
          imagePullPolicy: Always
          name: api
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
