client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      labels:
        io.kompose.network/frontend: "true"
        io.kompose.service: client
    spec:
      containers:
        - image: docker.cs.vt.edu/jackp96/rewardreadydocker/nginx:1.6
          imagePullPolicy: Always
          name: client
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
