api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: api
  name: api
spec:
  type: ClusterIP
  ports:
    - name: "6868"
      port: 6868
      targetPort: 9000
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
