mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  labels:
    io.kompose.service: mysqldb
  name: mysqldb
  namespace: rewardready
spec:
  ports:
    - name: "3307"
      port: 3307
      targetPort: 3306
  selector:
    io.kompose.service: mysqldb
  type: ClusterIP
status:
  loadBalancer: {}
